# fsgenerator

./: .gitignore  README.md  description.md  generate.py  pyproject.toml
fsgenerator/: __main__.py  cli.py  parser.py  resolver.py  type_mapping.py  writer.py
fsgenerator/generators/: domain_entity.py  dto_schema.py  frontend_router.py  i18n.py  repository_impl.py  repository_port.py  router.py  shared.py  sqlalchemy_model.py  template_html.py  use_case.py
fsgenerator/sample_entities/: README.md  app_config.json  sample.json  ypokatastima.json
fsgenerator/templates/: auth_models.py.j2  auth_router.py.j2  auth_security.py.j2  dependencies.py.j2  domain_entity.py.j2  dto_schema.py.j2  frontend_router.py.j2  html_admin_users.html.j2  html_base.html.j2  html_change_password.html.j2  html_form.html.j2  html_home.html.j2  html_list.html.j2  html_login.html.j2  html_register.html.j2  i18n_helper.py.j2  i18n_router.py.j2  main_app.py.j2  pyproject_toml.j2  repository_impl.py.j2  repository_port.py.j2  router.py.j2  sqlalchemy_model.py.j2  style.css  use_case.py.j2
json_entities/: apoxorisi.json  app_config.json  company.json  eidikotita.json  eidikotita_kodes.json  employee.json  kpk.json  kpk_d.json  mis.json  mis_erg.json  mis_erg_details.json  parousia.json  proslipsi.json  syllogiki_symbasi.json  syllogiki_symbasi_details.json  symbasi.json  ypokatastima.json
