[project]
name = "fsgenerator"
version = "0.6.0"
description = "Rapid full stack development with JSON entities"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["jinja2>=3.1"]

[project.scripts]
fsgenerator = "fsgenerator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["fsgenerator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
